@@ -10,8 +10,9 @@ wajig (2.01) unstable; urgency=low
   * POLICY: more than one person has complained about removal of the alias of
     this command, AVAILABLE; I put it back.
   * SHOW: add -f|--fast to offer apt-cache's much faster implementation
+  * INSTALL/DIST: fix brokenness, fixes LP: #540740.
 
- -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Fri, 05 Nov 2010 10:12:46 +0200
+ -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Fri, 05 Nov 2010 16:30:41 +0200
 
 wajig (2.0.50.1) unstable; urgency=low
 
